add_subdirectory(bp2p_plugin)
add_subdirectory(p2p_net_plugin)
add_subdirectory(p2p_net_api_plugin)
add_subdirectory(http_plugin)
add_subdirectory(http_client_plugin)
add_subdirectory(core_plugin)
add_subdirectory(core_api_plugin)
add_subdirectory(producer_plugin)
add_subdirectory(producer_api_plugin)
add_subdirectory(history_plugin)
add_subdirectory(history_api_plugin)

add_subdirectory(wallet_plugin)
add_subdirectory(wallet_api_plugin)
#add_subdirectory(txn_test_gen_plugin)
add_subdirectory(db_size_api_plugin)
#add_subdirectory(faucet_testp2p_net_plugin)
add_subdirectory(mongo_db_plugin)
add_subdirectory(login_plugin)

# Forward variables to top level so packaging picks them up
set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_DEBIAN_PACKAGE_DEPENDS} PARENT_SCOPE)
